--- a/src/Bundles/Blog/Views/index.twig
+++ b/src/Bundles/Blog/Views/index.twig
@@ -33,40 +33,44 @@
                             </a>
                         </div>
 
-                        {% for post in posts %}
-                            <div class="blog-item style-5">
-                                <div class="blog-media">
-                                    <img src="images/blog/blog_848x565.jpg" alt="">
+                        {!% for row in posts | batch(3) %!}
+                            {% for post in posts %}
+                                <div class="blog-item style-5">
+                                    <div class="blog-media">
+                                        <img src="images/blog/blog_848x565.jpg" alt="">
+                                    </div>
+                                    <div class="blog-content">
+                                        <h3><a href="{{ path('blog.show', {slug: post.slug, id: post.id}) }}">{{ post.title }}</a></h3>
+                                        <p>
+                                            {{ post.content | excerpt | nl2br }}
+                                        </p>
+                                    </div>
+                                    <div class="blog-info">
+                                        <div class="date">
+                                            <i class="fa fa-calendar"></i>
+                                            {{ post.updated_at | ago }}
+                                        </div>
+                                        <div class="author">
+                                            <i class="fa fa-user"></i>
+                                            De {{ post.author }}
+                                        </div>
+                                        <div class="comment">
+                                            <i class="fa fa-comment-o"></i>
+                                            3
+                                        </div>
+                                        <div class="tag">
+                                            <i class="fa fa-tag"></i>
+                                            <a href="#">Nature</a>,<a href="#">Travel</a>
+                                        </div>
+                                        <a class="readmore" href="">Lire la suite...</a>
+                                    </div>
                                 </div>
-                                <div class="blog-content">
-                                    <h3><a href="{{ path('blog.show', {slug: post.slug, id: post.id}) }}">{{ post.title }}</a></h3>
-                                    <p>
-                                        {{ post.content }}
-                                    </p>
-                                </div>
-                                <div class="blog-info">
-                                    <div class="date">
-                                        <i class="fa fa-calendar"></i>
-                                        {{ post.updated_at }}
-                                    </div>
-                                    <div class="author">
-                                        <i class="fa fa-user"></i>
-                                        De {{ post.author }}
-                                    </div>
-                                    <div class="comment">
-                                        <i class="fa fa-comment-o"></i>
-                                        3
-                                    </div>
-                                    <div class="tag">
-                                        <i class="fa fa-tag"></i>
-                                        <a href="#">Nature</a>,<a href="#">Travel</a>
-                                    </div>
-                                    <a class="readmore" href="">Lire la suite...</a>
-                                </div>
-                            </div>
-                        {% endfor%}
+                            {% endfor %}
+                        {!% endfor%!}
 
                         {% include 'elements/pagination.twig' %}
+
+                        {{ paginate(posts, 'blog.index') }}
 
                     </div>
                     {% include 'elements/sidebar.twig' %}
