Add AdminBundle and pagination

--- a/src/Bundles/Blog/Views/index.twig
+++ b/src/Bundles/Blog/Views/index.twig
@@ -48,7 +48,7 @@
                                     <div class="blog-info">
                                         <div class="date">
                                             <i class="fa fa-calendar"></i>
-                                            {{ post.updated_at | ago }}
+                                            {{ post.updated_at }}
                                         </div>
                                         <div class="author">
                                             <i class="fa fa-user"></i>
